@@ -67,7 +67,8 @@ Fixes:
    * Fix entry to enable have_selection only when a text is actually selected.
    * Fix the naviframe to clear the text parts when it's item is deleted.
    * Fix the mapbuf to update it's content correcltly evenif they go outside of the buffer.
-   * Fix the naviframe to resize it's items which are inserted.	
+   * Fix the naviframe to resize it's items which are inserted.
+   * Fix the naviframe to send signal emits one time for content show/hide, text show/hide.
 
 Removals:
 
